# docs/swagger.json
@@ -7,11 +7,11 @@
         "version": "1.0"
     },
     "host": "localhost:8000",
-    "basePath": "/",
+    "basePath": "/api",
     "paths": {
-        "/api/songs": {
+        "/songs": {
             "get": {
-                "description": "get all list",
+                "description": "Возвращает список песен с возможностью фильтрации по всем полям.",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,37 +19,62 @@
                     "application/json"
                 ],
                 "tags": [
-                    "list"
+                    "Песни"
                 ],
-                "summary": "Get All List",
-                "operationId": "get-all-list",
+                "summary": "Получить список песен",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Группа или исполнитель песни",
+                        "name": "group",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Название песни",
+                        "name": "song",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Дата выхода песни (в формате DD-MM-YYYY)",
+                        "name": "release_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Фрагмент текста песни",
+                        "name": "text",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ссылка на песню",
+                        "name": "link",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Номер страницы (по умолчанию 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Количество записей на странице (по умолчанию 10)",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Список песен",
                         "schema": {
                             "$ref": "#/definitions/handlers.getListsResponse"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    },
                     "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    },
-                    "default": {
-                        "description": "",
+                        "description": "Ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/handlers.errorResponse"
                         }
@@ -57,7 +82,7 @@
                 }
             },
             "post": {
-                "description": "create song list",
+                "description": "Создает новую песню, заполняя необходимые поля из внешнего API по группе и названию песни.",
                 "consumes": [
                     "application/json"
                 ],
@@ -65,14 +90,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "list"
+                    "Песни"
                 ],
-                "summary": "Create song",
-                "operationId": "create-list",
+                "summary": "Создать новую песню",
                 "parameters": [
                     {
-                        "description": "list info",
-                        "name": "input",
+                        "description": "Данные для создания песни",
+                        "name": "inputSong",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -82,31 +106,170 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "ID созданной песни",
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/handlers.createSongResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
+                        "description": "Неверный запрос",
                         "schema": {
                             "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/songs/{id}": {
+            "put": {
+                "description": "Обновляет данные о песне по ID. Требуется передать данные для обновления в формате JSON.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Песни"
+                ],
+                "summary": "Обновить информацию о песне",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID песни для обновления",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Данные для обновления песни",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.InputUpdateSong"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Статус обновления",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.statusResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
                         "schema": {
                             "$ref": "#/definitions/handlers.errorResponse"
                         }
                     },
-                    "default": {
-                        "description": "",
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Удаляет песню по заданному ID. Требуется передать ID песни в URL.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Песни"
+                ],
+                "summary": "Удалить песню по ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID песни для удаления",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Статус удаления",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.statusResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/songs/{id}/lyrics": {
+            "get": {
+                "description": "Данный метод извлекает текст песни по ID, делит его на куплеты и возвращает их постранично.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Песни"
+                ],
+                "summary": "Получить текст песни с разбивкой на куплеты",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID песни",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Номер страницы для пагинации (по умолчанию 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Количество куплетов на странице (по умолчанию 2)",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список куплетов",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.getListVerses"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверные параметры запроса",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/handlers.errorResponse"
                         }
@@ -116,11 +279,30 @@
         }
     },
     "definitions": {
+        "handlers.createSongResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "handlers.errorResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.getListVerses": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -135,6 +317,14 @@
                 }
             }
         },
+        "handlers.statusResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.InputSong": {
             "type": "object",
             "required": [
@@ -146,6 +336,26 @@
                     "type": "string"
                 },
                 "song": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.InputUpdateSong": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "release_date": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                },
+                "text": {
                     "type": "string"
                 }
             }
